// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncGeneratorCall non strict: in 1`] = `Array []`;

exports[`AsyncGeneratorCall non strict: out 1`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"method\\":\\"rpc.async-iterator.next\\",\\"params\\":[\\"non-exist\\"]}",
]
`;

exports[`AsyncGeneratorCall: in 1`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"error\\":{\\"code\\":-1,\\"message\\":\\"Missing iter non-exist\\",\\"data\\":{\\"type\\":\\"Error\\"}}}",
]
`;

exports[`AsyncGeneratorCall: out 1`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"method\\":\\"rpc.async-iterator.next\\",\\"params\\":[\\"non-exist\\"]}",
]
`;

exports[`Bad messages: in 1`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"error\\":{\\"code\\":-32700,\\"message\\":\\"Parse error\\",\\"data\\":{\\"stack\\":\\"<mocked stack>\\",\\"type\\":\\"SyntaxError\\"}}}",
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":\\"id0\\",\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\"}}",
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"error\\":{\\"code\\":-32600,\\"message\\":\\"Invalid Request\\"}}",
]
`;

exports[`Bad messages: in 2`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"error\\":{\\"code\\":-32700,\\"message\\":\\"Parse error\\",\\"data\\":{\\"stack\\":\\"<mocked stack>\\",\\"type\\":\\"SyntaxError\\"}}}",
]
`;

exports[`Bad messages: out 1`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":\\"id0\\",\\"method\\":\\"method\\",\\"params\\":\\"invalid\\"}",
  "{\\"abc\\":1}",
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":\\"id1\\"}",
  "Not JSON!",
]
`;

exports[`Bad messages: out 2`] = `
Array [
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":\\"id0\\",\\"method\\":\\"method\\",\\"params\\":\\"invalid\\"}",
  "{\\"abc\\":1}",
  "{\\"jsonrpc\\":\\"2.0\\",\\"id\\":\\"id1\\"}",
  "Not JSON!",
]
`;

exports[`Batch messages 1`] = `undefined`;

exports[`Batch messages: in 1`] = `
Array [
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":0,\\"result\\":1},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"result\\":1}]",
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"result\\":1},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"result\\":1}]",
]
`;

exports[`Batch messages: out 1`] = `
Array [
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":0,\\"method\\":\\"f1\\",\\"params\\":[]},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"method\\":\\"f2\\",\\"params\\":{\\"x\\":1}}]",
  "[{\\"jsonrpc\\":\\"2.0\\",\\"method\\":\\"f1\\",\\"params\\":{}}]",
  "[{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"method\\":\\"f1\\",\\"params\\":{}},{\\"jsonrpc\\":\\"2.0\\",\\"id\\":null,\\"method\\":\\"f1\\",\\"params\\":{}}]",
  "[{\\"jsonrpc\\":\\"2.0\\",\\"method\\":\\"f1\\",\\"params\\":[]},{\\"jsonrpc\\":\\"2.0\\",\\"method\\":\\"f2\\",\\"params\\":{\\"x\\":1}}]",
]
`;
